--- a/GMC.html
+++ b/GMC.html
@@ -20,28 +20,9 @@
     <input type="submit" value="Search" >
   </div>
     </navbar>
-        <div id="form-bef">
-            <form>
-                <div>
-                  <label for="name" id="name">Name:</label>
-                  <input type="text" id="name" name="name" required>
-                </div>
-                <div>
-                  <label for="email">Email:</label>
-                  <input type="email" id="emal" name="email" required >
-                </div>
-                <div>
-                  <label for="password">Password:</label>
-                  <input type="password" id="password" name="password" required>
-                </div>
-                <div>
-                  <button id="submit-btn">Submit</button>
-                </div>
-              </form>
-              
-          </div>
+
 <section id="hero">
-    <img src="./images/39eff1195b8098bd8a284ff8752d9f9f.jpg" alt="img">
+<div>
     <div id="text-group">
 <h4 id="hero-text">#1 online shop in this room</h4>
 <h2 id="hero-text">Super value deals</h2>
@@ -49,7 +30,9 @@
 <p id="hero-text">What are ya waitin for?!</p>
 </div>
 
-<button id="shop-btn" onclick=begin()>Begin shopping</button>
+<button id="shop-btn" onclick=begin()>Begin shopping</button>    
+</div>
+<img src="./images/39eff1195b8098bd8a284ff8752d9f9f.jpg" alt="img">
 </section>
 
 <div id="sec2">
@@ -326,7 +309,7 @@
 
 <div id="bottom-bar">
 
-    <div id="logo-div2"><h2 id="logo">GOMY</h2> <h2 id="logo2">Cart</h2>
+    <div id="logo-div2"><h2 id="logo">GOMY</h2> <h2 id="logo2">Cart</h2> </div>
 <section3 id="sec3">   
 
 <div id="contacts">
@@ -364,7 +347,7 @@
         </div>
         
 </div>
-
+</div>
 </section3>
     <script src="./GMC.js"></script>
 </body>
