--- a/GMC.html
+++ b/GMC.html
@@ -24,7 +24,8 @@
     <br><br><br><br>
 
     <div id="invisibleI">
-      <h1>Signup Form</h1>
+
+     <div id="login-logo"> <h1>login Form</h1> <img src="./images/google-forms.png" alt="logo"></div>
       <form action="/signup" method="post" onsubmit="return validateForm(); preventSubmit(event); changeDivId()">
       
         <label for="name">Name:</label>
